<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/Layout_one"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/nunito_sans_extra_bold"
                    android:letterSpacing="0.25"
                    android:text="TENDO"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="-19dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp">

                    <FrameLayout
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_heart_blue" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_cart_blue" />

                        <TextView
                            android:id="@+id/tvShoppingCart_blue"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/circle_bg"
                            android:layout_gravity="end"
                            android:gravity="center"
                            android:maxLength="4"
                            android:text="1"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </FrameLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="White Cotton Shirt"
                    android:layout_marginStart="90dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Layout_one">

                <ImageView
                    android:id="@+id/Iv_Image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/tisho"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="330dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="@id/layout_2"
                app:layout_constraintEnd_toEndOf="@id/layout_2"
                app:layout_constraintStart_toStartOf="@id/layout_2"
                app:layout_constraintTop_toBottomOf="@id/layout_2">

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="26dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_share_blue" />


                </FrameLayout>


                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="26dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/notifi"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_blue_love" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/icubn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="oversized Denim Jacket"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:textColor="#4F6171"
                android:paddingLeft="40dp"
                android:layout_marginEnd="25dp"
                android:drawableRight="@drawable/ic_star_rate"
                app:layout_constraintTop_toBottomOf="@id/layout_3"/>

            <LinearLayout
                android:id="@+id/layout_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/icubn"
                app:layout_constraintTop_toBottomOf="@id/icubn">


                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="40dp"
                    android:src="@drawable/ic_addition" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01"
                    android:textColor="#B17248"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/notifi2"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="160dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_subtraction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₵67.90"
                    android:textColor="#B17248"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/layout_4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="TOTAL :"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="₵67.90"
                    android:textSize="22dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="#09427D"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout5"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="170dp"
                        android:layout_marginStart="70dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="INFO"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="120dp"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/view_bg" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="REVIEWS"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_sans_extra_bold"
                    android:layout_marginStart="30dp"
                    android:text="DESCRIPTION"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:textSize="12sp"
                    android:letterSpacing="0.02"
                    android:text="@string/description_string"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_sans_extra_bold"
                    android:layout_marginStart="30dp"
                    android:text="@string/delivery"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:letterSpacing="0.02"
                    android:textSize="12sp"
                    android:text="@string/details"/>
            </LinearLayout>

            <TextView
                android:id="@+id/similar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="432dp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="170dp"
                android:text="SIMILAR PRODUCTS"
                android:fontFamily="@font/nunito_sans_extra_bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/layout8"
                app:layout_constraintStart_toStartOf="@id/layout8"
                app:layout_constraintTop_toBottomOf="@id/layout8" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewsimilarproducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/similar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerviewsimilarproducts">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="share product"
                    android:textColor="#1099EE"
                    android:layout_marginStart="35dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginEnd="55dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_share_blue_dark"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add to cart"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_white_cart"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>